# EELSNMF

./: EELSNMF.py  Gprep.py  LICENSE.txt  README.md  analysis.py  demo.ipynb  imports.py  main.py  pyproject.toml  tests.ipynb  utils.py
EELSNMF/: __init__.py  analysis.py  base.py  decompositions.py  imports.py  modelG.py  plot.py  utils.py
EELSNMF/_decompositions/: alternate_bg_elnes.py  cupy_default_kldivergence_decomposition.py  cupy_utils.py  default_decomposition.py  default_kldivergence_decomposition.py  edgewise_utils.py  frobenius_edgetv.py  frobenius_edgewisepenalty.py  frobenius_penaltyedgewise.py  sumrule_regularization.py  tv_sumrule_combined.py
EELSNMF/_old/: Gprep.py  SumRules.py  main.py
EELSNMF/experimental/: EML.py  TorchDecompositions.py
_decompositions/: alternate_bg_elnes.py  cupy_default_kldivergence_decomposition.py  default_decomposition.py
experimental/: EML.py  TorchDecompositions.py
refactor/: _default_decomposition.py  analysis.py  base.py  decompositions.py  imports.py  modelG.py  plot.py  tests.ipynb  utils.py
refactor/_decompositions/: alternate_bg_elnes.py  cupy_default_decomposition.py  cupy_default_kldivergence_decomposition.py  default_decomposition.py  default_kldivergence_decomposition.py
